grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    k8s-app: grafana-core
  name: grafana-core
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: grafana.host.com
    http:
      paths:
      - path: /
        backend:
          servicePort: 80
          serviceName: grafana-core
